<resources>
    <string name="app_name" translatable="false">Africell</string>
    <string name="logged_in">Logged In</string>
    <string name="error">Error</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send">send</string>
    <string name="verification">Verification</string>
    <string name="verification_message_sms">Please Enter the PIN Received in your SMS to verify your number</string>
    <string name="verify">Verify</string>
    <string name="phone_number_not_valid">Phone number is not valid</string>
    <string name="pin_view">PIN Code Here</string>
    <string name="skip">skip</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="location">Location</string>
    <string name="post_stores">POS Stores</string>
    <string name="direction_not_available">Direction is not available</string>
    <string name="no_location_available">There is no locations available</string>
    <string name="call_us">Call Us</string>
    <string name="get_direction">Get Direction</string>
    <string name="search">Search</string>
    <string name="sms">SMS</string>
    <string name="services">Services</string>
    <string name="customer_care">Customer Care</string>
    <string name="my_account_info">My Account\nInfo</string>
    <string name="line_n_recharge">Line\nRecharge</string>
    <string name="my_bundles_services"><![CDATA[My\nBundles & Services]]></string>
    <string name="data_calculator">Data Calculator</string>
    <string name="value_added_services">VAS</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="no_services_available">There are no services available</string>
    <string name="speed_test">Speed Test</string>
    <string name="book_number">Book Your Number</string>
    <string name="useful_number">Useful Number</string>
    <string name="report_incident">Report Incident</string>
    <string name="no_book_available">There is any number available!</string>
    <string name="book_now">Book Now</string>
    <string name="share">Share</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="sound">Sound</string>
    <string name="let_us_know">Let Us Know</string>
    <string name="incident_type">Incident Type</string>
    <string name="your_message">Your Message</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="bundles">Bundles</string>
    <string name="no_bundle_available">There is no bundle available right now!</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here_sign_up">New Here! Sign Up</string>
    <string name="send_free_sms">Send Free SMS</string>
    <string name="your_free_message">Your Free Message</string>
    <string name="all_recharge_cards">All Recharge Cards</string>
    <string name="recharge">recharge</string>
    <string name="number_here">Number Here</string>
    <string name="my_airtime_scratch_card_number_is">My airtime scratch card number is:</string>
    <string name="credit_transfer">Credit\nTransfer</string>
    <string name="my_profile">My Profile</string>
    <string name="please_enter_mobile_number">Please Enter your mobile number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="signing_up">Signing Up</string>
    <string name="please_fill_your_information">Please Fill Your Information</string>
    <string name="your_password">Your Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="update">Update</string>
    <string name="send_amount">Send Amount</string>
    <string name="amount">Amount</string>
    <string name="send_to_number">Send To Number</string>
    <string name="activate">Activate</string>
    <string name="activate_for_me">Activate Bundle For Me</string>
    <string name="activate_bundle_for_someone_else">Activate Bundle For Someone Else</string>
    <string name="active">Active</string>
    <string name="submit">Submit</string>
    <string name="auto_renewal">Auto-Renewal</string>
    <string name="number">Number</string>
    <string name="calculate">Calculate</string>
    <string name="my_accounts">My Accounts</string>
    <string name="account_management">Account Management</string>
    <string name="add_new_account">+Add New Account</string>
    <string name="free_balance">Free Balance</string>
    <string name="account_statement">Account Statement</string>
    <string name="hello_name">Hello  %s!</string>
    <string name="your_account_type_is">Your Account Type is</string>
    <string name="buy">Buy</string>
    <string name="login_first">Login First</string>
    <string name="help_message_1">Africell aims at making a difference not only through the communication sector but also in the community</string>
    <string name="help_message_2">Africell aim at making a difference not only through the communication sector but also in the community</string>
    <string name="how_can_we_help_you">How Can We Help You?</string>
    <string name="support_category">Support Category</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="next_step">Next Step</string>
    <string name="p2p_n_tranfer">P2P\nTransfer</string>
    <string name="afri_n_power">Afri\nPower</string>
    <string name="money_n_tranfer">Money\nTransfer</string>
    <string name="merchant_n_payment">Merchant\nPayment</string>
    <string name="transfer_n_money">Transfer\nMoney</string>
    <string name="p2p_tranfer">P2P Transfer</string>
    <string name="afri_power">Afri Power</string>
    <string name="money_tranfer">Money Transfer</string>
    <string name="merchant_payment">Merchant Payment</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="cancel">Cancel</string>
    <string name="please_add_the_needed_information">Please add the needed information</string>
    <string name="enter_msisdn">Enter MSISDN</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="select_wallet">Select Wallet</string>
    <string name="amount_to_transfer">Amount To Transfer</string>
    <string name="enter_merchant_id">Enter Merchant ID</string>
    <string name="line_recharge">Line Recharge</string>
    <string name="failed">Failed</string>
    <string name="successful">Successful</string>
    <string name="estimate_monthly_usage">Estimate Monthly Usage</string>
    <string name="suggested_data_plan">Suggested Data Plan</string>
    <string name="valid_till">Valid Till</string>
    <string name="welcome_to">welcome to</string>
    <string name="africell">Africell</string>
    <string name="volume">Volume</string>
    <string name="login_with_africell">Login with africell</string>
    <string name="fom_number">Fom Number</string>
    <string name="to_number">To Number</string>
    <string name="now_you_can_get_your_data_bundles_select_one_of_the_packages_below">Now you can get your Data Bundles. Select one of the packages Below</string>
    <string name="you_are_not_subscribed_to_any_bundles">You are not subscribed to any bundles</string>
    <string name="delete_account">Delete Account</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_want_to_delete">Are you sure you want to delete your account, this action is irreversible?</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="expiry_date">"Expiry Date: "</string>
    <string name="price">"Price: "</string>
    <string name="valid_for">"Valid for: "</string>
    <string name="_bundles">\" Bundles\"</string>
    <string name="you_dont_have_any_afrimoney_wallet">You don\'t have any afrimoney wallet</string>
    <string name="your_profile_has_been_update_successfully">Your profile has been updated successfully</string>
    <string name="expiry_date_">\"Expiry Date: \"</string>
    <string name="phone_number_is_not_available">Phone number is not available</string>
    <string name="to_server_you_better_please_enable_google_map">To serve you better please enable google map</string>
    <string name="exp">EXP:</string>
    <string name="your_account_has_been_added_successfy">Your Account has been added successfully</string>
    <string name="bonus_balance">Bonus balance</string>
    <string name="my_balance">My Balance</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="pending_transactions">Pending Transactions</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="buy_anytime">Buy\nAnytime</string>
    <string name="pay_my_bills">Pay\nMy Bills</string>
    <string name="banking_nservices">Banking\nServices</string>
    <string name="strong_password_error">The password does not meet the complexity requirements (1 capital letter, 1 small letter, 1 digit and 1 special character)</string>
    <string name="with_your_mobile_number">with your Mobile Number</string>
    <string name="password_length_validation_error">Password must be at least 4 digits</string>
    <string name="data_limit">Data Limit</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
</resources>
