<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/verification"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

        <TextView
                android:id="@+id/verificationMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/verification_message_sms"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinLayout"
                style="@style/TextInputLayout.grey"
                android:layout_width="match_parent"
android:layout_marginTop="@dimen/spacing_normal"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_tiny"
                app:errorTextColor="@color/red_900">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText.violet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/pin_view"
                    android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/verifyButton"
                style="@style/Button.purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/verify" />


    </LinearLayout>

</ScrollView>