<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/closeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_normal"
                    android:src="@drawable/close_icon" />

            <TextView
                    android:id="@+id/titleTxt"
                    style="@style/TextAppearance.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:text="@string/merchant_payment" />

        </LinearLayout>

        <TextView
                style="@style/TextAppearance.normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:gravity="center"
                android:text="@string/please_add_the_needed_information" />

        <com.africell.africell.ui.spinner.MaterialSpinner
                android:id="@+id/selectWalletLayout"
                style="@style/TextInputLayout.grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/select_wallet"
                app:contentStyle="@style/TextInputEditText.grey"
                app:endIconDrawable="@mipmap/icon_arrow_pink_down"
                app:endIconMode="custom"
                app:endIconTint="@null"
                app:spinnerMode="dialog"
                app:startIconDrawable="@mipmap/fields_empty" />

        <!--

                <com.africell.africell.ui.spinner.MaterialSpinner

                        android:id="@+id/fromLayout"
                        style="@style/TextInputLayout.grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_normal"
                        app:contentStyle="@style/TextInputEditText.grey"
                        app:endIconDrawable="@mipmap/icon_arrow_pink_down"
                        app:endIconMode="custom"
                        app:endIconTint="@null"
                        android:hint="Sender MSSiSDN"
                        app:spinnerMode="dialog"
                        app:startIconDrawable="@mipmap/fields_empty" />
        -->

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/merchantLayout"
                style="@style/TextInputLayout.grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/enter_merchant_id">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText.grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountLayout"
                style="@style/TextInputLayout.grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/amount_to_transfer">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText.grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinCodeLayout"
                style="@style/TextInputLayout.grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:hint="@string/enter_pin_code">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText.grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                android:id="@+id/submitBtn"
                style="@style/Button.purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@string/send" />

    </LinearLayout>


</ScrollView>